--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
             class="bg-gradient-to-br from-sky-500 to-cyan-400 bg-clip-text text-transparent">Marek</span> 👋</h1>
         <p class="mt-3">I am a seasoned Ruby on Rails developer with nearly 20 years of experience crafting high-quality, scalable
           web applications. My expertise extends beyond Rails to include Node.js, JavaScript, Turbo, AWS services,
-          Heroku, simple Linux administration, microservices, Shopify Apps, OpenAi and many more, enabling me to tackle
+          Heroku, simple Linux administration, microservices, Shopify Apps, OpenAI and many more, enabling me to tackle
           a wide variety of technical challenges and deliver tailored solutions.</p>
         <p class="mt-3">If you’re looking for an experienced developer with a broad skill set to help bring your project to life,
-          feel free to reach out to me at contact@programatornia.dev. </p>
+          feel free to reach out to me at <span class="text-underlined">contact@programatornia.dev</span>. </p>
         <p class="mt-3">Let’s build something great together!</p>
         <div class="mt-3 flex gap-1"></div>
       </div>
