--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     content="Programatornia, Marek Piechocki, Experienced Ruby on Rails developer with nearly 20 years of expertise, specializing in web applications, Node.js, JavaScript, Turbo, AWS, Heroku, microservices, Shopify Apps, and more">
   <meta name="author" content="Marek Piechocki">
   <link rel="alternate" type="application/rss+xml" href="/rss.xml">
-  <link rel="icon" type="image/x-icon" href="/favicon.ico">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <link rel="stylesheet" href="/astro/index.DymsBjdX.css">
 </head>
 
